<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".EditTextView">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/edit_tv_title"
            android:textSize="34sp"
            android:textStyle="bold"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp">

        <TextView
                android:text="@string/textview_de_ejemplo"
                android:layout_width="170dp"
                android:layout_height="48dp"
                android:id="@+id/testTextView"
                android:textAlignment="center"
                android:gravity="center" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dimensiones_del_texto"
                android:textStyle="bold"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/editXText"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:autofillHints=""
                        android:hint="@string/x"
                        android:inputType="number"
                        android:textSize="14sp"
                        android:minHeight="48dp" />

            <EditText
                    android:id="@+id/editYText"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:autofillHints=""
                    android:hint="@string/y"
                    android:inputType="number"
                    android:textSize="14sp"
                    android:minHeight="48dp" />

        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_btn_text_size"
                android:textStyle="bold"
                android:layout_marginBottom="10dp" />

        <NumberPicker
                android:id="@+id/sizeNumberPicker"
                android:layout_width="211dp"
                android:layout_height="66dp"
                android:value="0"
                android:layout_marginBottom="20dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contenido_del_textview"
                android:textStyle="bold"
                android:layout_marginBottom="10dp" />

        <EditText
                android:id="@+id/editTextInput"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:autofillHints=""
                android:hint="@string/edit_btn_input_hint"
                android:inputType="text"
                android:textSize="14sp"
                android:layout_marginBottom="20dp"
                android:minHeight="48dp" />
    </LinearLayout>

    <Button
            android:text="@string/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backButton" />
</LinearLayout>