<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="40dp"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/app_title"
            android:textSize="34sp"
            android:textStyle="bold"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="140dp"
            android:padding="60sp">

        <Button
                android:text="@string/edit_btn_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editBtnButton"
                android:layout_marginBottom="20dp"/>

        <Button
                android:text="@string/edit_tv_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTvButton"
                android:layout_marginBottom="20dp"/>

        <Button
                android:text="@string/edit_ll_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editLlButton"/>

    </LinearLayout>
</LinearLayout>
