<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".EditButton">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/edit_btn_title"
            android:textSize="34sp"
            android:textStyle="bold"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="30dp">

        <Button
                android:text="Boton de Ejemplo"
                android:layout_width="171dp"
                android:layout_height="match_parent"
                android:id="@+id/testButton"
                android:backgroundTint="@color/defaultColor" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_btn_color_text"
                android:textStyle="bold"
                android:layout_marginBottom="10dp" />

        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_marginBottom="20dp"
                android:minHeight="48dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_btn_text_size"
                android:textStyle="bold"
                android:layout_marginBottom="10dp" />

        <NumberPicker
                android:id="@+id/numberPicker"
                android:layout_width="211dp"
                android:layout_height="66dp"
                android:value="0"
                android:layout_marginBottom="20dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_btn_text_prompt"
                android:textStyle="bold"
                android:layout_marginBottom="10dp" />

        <EditText
                android:id="@+id/editTextInput"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:autofillHints=""
                android:hint="@string/edit_btn_input_hint"
                android:inputType="text"
                android:textSize="14sp"
                android:layout_marginBottom="20dp"
                android:minHeight="48dp" />
    </LinearLayout>

    <Button
            android:text="@string/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backButton" />

</LinearLayout>